:hammer: Rebuild http request with new client